--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
     "clsx": "^2.1.1",
+    "install": "^0.13.0",
     "next": "14.2.11",
+    "npm": "^10.8.3",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.1.14"
