--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "npm": "^10.8.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
